# segmentator

./: 01-Preparação do projeto.docx  02-Telas da VTK.docx  CMakeLists.txt  README.md  Tela.cpp  Tela.h  imageLoader.cpp  imageLoader.h  myVolume.cpp  myVolume.h  segmentator.cpp  tarefas.xlsx  telaImagemInteractor.cpp  telaImagemInteractor.h
